--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "smatpoint-game-test",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "start": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "test": "jest"
   },
