--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "@vue/vue3-jest": "^29.2.6",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "serve": "^14.2.4",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5",
-    "vue-tsc": "^2.2.0",
-    "vue3-jest": "^27.0.0-alpha.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0",
+    "vue-tsc": "^2.2.0"
   }
 }
