--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -10,12 +8,15 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    command: sh -c "npm install && npm start"
 
   test:
     build: .
-    command: npm run test
+    command: sh -c "npm install && npm run test"
     volumes:
       - .:/app
       - /app/node_modules
     environment:
       - NODE_ENV=test
+    depends_on:
+      - app
